Add doc and small code refactoring